tests/snapshots/render/iterm2@commonmark-spec-142-fenced_code_blocks.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/142-fenced_code_blocks.md
snapshot_kind: text
---
[32m╭── ruby ──────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[32mdef[0m [33mfoo[0m([34mx[0m)                                                                  [32m │[0m
[32m│ [0m  [32mreturn[0m [95m3[0m                                                                  [32m │[0m
[32m│ [0m[32mend[0m                                                                         [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
