tests/snapshots/render/iterm2@commonmark-spec-143-fenced_code_blocks.snap
---
source: tests/render.rs
assertion_line: 116
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/143-fenced_code_blocks.md
---
[32m╭── ruby startline=3 $%@#$ ────────────────────────────────────────────────────╮[0m
[32m│ [0mdef foo(x)                                                                  [32m │[0m
[32m│ [0m  return 3                                                                  [32m │[0m
[32m│ [0mend                                                                         [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
