tests/snapshots/render/iterm2@commonmark-spec-147-fenced_code_blocks.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/147-fenced_code_blocks.md
snapshot_kind: text
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[33m``` aaa[0m                                                                     [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
