tests/snapshots/render/iterm2@commonmark-spec-184-html_blocks.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/184-html_blocks.md
snapshot_kind: text
---
[32m  [0m[32m<div>
[0m
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[33m<div>[0m                                                                       [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
