tests/snapshots/render/iterm2@commonmark-spec-212-link_reference_definitions.snap
---
source: tests/render.rs
assertion_line: 116
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/212-link_reference_definitions.md
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[foo]: /url                                                                 [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m

[foo]
